--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker-build": "docker build -t slipbox-saver .",
+    "docker-run": "docker run -p 3000:3000 -d slipbox-saver"
   },
   "author": "",
   "license": "ISC",
