--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docker-build": "docker build -t slipbox-saver .",
-    "docker-run": "docker run -p 3000:3000 -d slipbox-saver"
+    "docker-run": "docker run -p 3000:3000 --env-file .env -d slipbox-saver"
   },
   "author": "",
   "license": "ISC",
