--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "azure-blob-storage-app",
+  "name": "slipbox-saver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
