--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/storage-blob": "^12.17.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.17.1",
     "multer": "^1.4.5-lts.1",
     "typescript": "^5.2.2"
   },
